force-app/main/default/objects/Host_Accept_Guest__e/Host_Accept_Guest__e.object-meta.xml
<CustomObject>
    <label>Host Accept Guest</label>
    <pluralLabel>Accept Guests</pluralLabel>
</CustomObject>