force-app/main/default/objects/Host_Accept_Guest__e/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>