force-app/main/default/objects/Host_Accept_Guest__e/fields/Guest_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Guest_Firstname__c</fullName>
    <label>Guest Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>