force-app/main/default/objects/Host_Accept_Guest__e/fields/Guest_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Guest_Lastname__c</fullName>
    <label>Guest Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>