force-app/main/default/objects/Host_Accept_Guest__e/fields/Guest_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone_Number__c</fullName>
    <label>Guest Phone Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>