force-app/main/default/objects/Host_Accept_Guest__e/fields/Host_Firstname__c.field-meta.xml
<CustomField>
    <fullName>Host_Firstname__c</fullName>
    <label>Host Firstname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>