force-app/main/default/objects/Host_Accept_Guest__e/fields/Host_Lastname__c.field-meta.xml
<CustomField>
    <fullName>Host_Lastname__c</fullName>
    <label>Host Lastname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>